# django-bot-project

./: .gitignore  README.md  pyproject.toml
django_project/: db.sqlite3  env_settings.py
django_project/django_tg_bot/: asgi.py  settings.py  urls.py  wsgi.py
django_project/tg_bot/: models.py  state_machine_runners.py  states.py  urls.py
django_project/tg_bot/migrations/: 0001_initial.py
